--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"axios": "^0.21.1",
 		"browser-sync": "^2.26.13",
+		"caniuse-lite": "^1.0.30001179",
 		"del": "^5.1.0",
 		"eslint": "^7.1.0",
 		"gulp": "^4.0.2",
