--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Adalab web starter kit",
 	"dependencies": {
 		"axios": "^0.21.1",
-		"browser-sync": "^2.26.13",
+		"browser-sync": "^2.26.14",
 		"caniuse-lite": "^1.0.30001179",
 		"del": "^5.1.0",
 		"eslint": "^7.1.0",
@@ -23,8 +23,10 @@
 		"gulp-zip": "*",
 		"http-proxy": "^1.18.1",
 		"node-notifier": "^9.0.0",
+		"npm": "^7.8.0",
 		"object-path": "^0.11.5",
-		"run-sequence": "*"
+		"run-sequence": "*",
+		"y18n": "^3.2.2"
 	},
 	"devDependencies": {
 		"lodash.template": ">=4.5.0"
