--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "adalab-web-starter-kit",
+  "name": "portfolionuria",
   "version": "3.0.1",
-  "description": "Adalab web starter kit",
+  "description": "portfolio nuria",
   "dependencies": {
     "browser-sync": "^2.26.12",
+    "caniuse-lite": "^1.0.30001335",
     "del": "^5.1.0",
     "eslint": "^7.1.0",
     "gulp": "^4.0.2",
